SF Primes/src/objects/Case_Time__c.object
<CustomObject>
    <description>Time tracking on a case</description>
    <fields>
        <fullName>Case_Owner_Id__c</fullName>
        <label>Case Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Times</relationshipLabel>
        <relationshipName>Case_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Time_on_Case_Days__c</fullName>
        <formula>(( Time_on_Case__c / 60)/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time on Case-Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_on_Case__c</fullName>
        <label>Time on Case-Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Case Time</label>
    <nameField>
        <displayFormat>CT-{0000000000}</displayFormat>
        <label>Case Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Times</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>